--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,14 @@ dependencies:
   flutter_svg: ^2.2.0
   intl: ^0.18.1
   dropdown_button2: ^2.3.9
+  shimmer: ^3.0.0
+  open_filex: ^4.0.2
+  url_launcher: ^6.3.0
+  flutter_cached_pdfview: ^0.4.1
+  dio: ^5.3.2
+  path_provider: ^2.1.1
+  permission_handler: ^11.0.1
+
 
 
 
