today worked profile added in bottom navigation bar and created tracking pages

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,13 @@ dependencies:
   open_file:
   http:
   shared_preferences: ^2.2.2
+  floating_bottom_navigation_bar: ^1.5.2
+  geolocator: ^11.0.0
+  google_maps_flutter: ^2.6.0
+  geocoding: ^2.2.0
+  image_picker: ^1.1.2  # or latest version
+
+
 
 
 
