--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,8 @@ dependencies:
   google_mlkit_face_detection: ^0.10.0
   floating_bottom_bar: ^0.0.1
   dropdown_search: ^6.0.1
+  flutter_advanced_drawer: ^1.5.0
+
 
 
 
