--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,6 +63,8 @@ dependencies:
   floating_bottom_bar: ^0.0.1
   dropdown_search: ^6.0.1
   flutter_advanced_drawer: ^1.5.0
+  cached_network_image: ^3.3.0
+
 
 
 
