--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   shimmer: ^3.0.0
   url_launcher: ^6.3.0
   flutter_cached_pdfview: ^0.4.1
+  pdf: ^3.11.1
+  printing: ^5.13.3
   dio: ^5.3.2
   path_provider: ^2.1.1
   permission_handler: ^11.0.1
